Refactor bot and bot events.